--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <link rel="canonical" href="https://liwehappy.github.io/metastability/" />
 <meta property="og:url" content="https://liwehappy.github.io/metastability/" />
 <meta property="og:site_name" content="metastability" />
-<meta property="og:image" content="https://liwehappy.github.io/metastability/images/logo.png" />
+<meta property="og:image" content="https://liwehappy.github.io/metastability/images/plasma_jet.jpg" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta property="twitter:image" content="https://liwehappy.github.io/metastability/images/logo.png" />
+<meta property="twitter:image" content="https://liwehappy.github.io/metastability/images/plasma_jet.jpg" />
 <meta property="twitter:title" content="metastability" />
 <script type="application/ld+json">
-{"headline":"metastability","url":"https://liwehappy.github.io/metastability/","@type":"WebSite","image":"https://liwehappy.github.io/metastability/images/logo.png","name":"metastability","description":"A place to share knowledge and insight about nature.","@context":"https://schema.org"}</script>
+{"headline":"metastability","url":"https://liwehappy.github.io/metastability/","@type":"WebSite","image":"https://liwehappy.github.io/metastability/images/plasma_jet.jpg","name":"metastability","description":"A place to share knowledge and insight about nature.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/metastability/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://liwehappy.github.io/metastability/feed.xml" title="metastability" /><link rel="shortcut icon" type="image/x-icon" href="/metastability/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
@@ -86,13 +86,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><p>Welcome to my blog.</p>
 
-<p><img src="/metastability/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
-
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+<p>I will share knowledge about data science/programming/books and the most important learn “how to learn.”</p>
 
 <h1 id="posts">Posts</h1>
 
