--- a/about/index.html
+++ b/about/index.html
@@ -101,7 +101,9 @@ window.onload = wrap_img;
 
 <h2 id="publication">Publication</h2>
 
-<p><img src="/metastability/images/fusion_plasma.jpg" alt="" title="Photo by department of applied physics, Ghent University. Some rights reserved" /></p>
+<p>YT Lin (2018) Enhancement of Selected Species in Nonthermal Atmospheric Pressure Plasma: Implications on Wound Healing Effects. IEEE Transactions on Plasma Science, 2018 DOI: 10.1109/TPS.2018.2867495</p>
+
+<p><img src="/images/fusion_plasma.jpg" alt="" title="Photo by department of applied physics, Ghent University. Some rights reserved" /></p>
 
   </div>
 
