deploy: 71da17a680c4c1a73449364b75d69ec49a7ca658

--- a/about/index.html
+++ b/about/index.html
@@ -103,7 +103,7 @@ window.onload = wrap_img;
 
 <p>YT Lin (2018) Enhancement of Selected Species in Nonthermal Atmospheric Pressure Plasma: Implications on Wound Healing Effects. IEEE Transactions on Plasma Science, 2018 DOI: 10.1109/TPS.2018.2867495</p>
 
-<p><img src="/images/fusion_plasma.jpg" alt="" title="Photo by department of applied physics, Ghent University. Some rights reserved" /></p>
+<p><img src="/metastability/images/fusion_plasma.jpg" alt="There are also data science application for fusion plasma" title="Photo by department of applied physics, Ghent University. Some rights reserved" /></p>
 
   </div>
 
